  logging parameters in wwwserver logs
- Add missing include_once('kernel/common/i18n.php'); in index_ajax.php
- Make sure admin user has access to /call even if PolicyOmitList/AnonymousAccessList is commented
- Add support for c.arguments on Y.io.ez() like Y.io() has
- Added support for setting ContentType with get parameter on ezjscore/call for development use
- Added ezjsc::search for re use by other extensions (same parameters as the one in ezflow and ezoe)
- Fixed ezjscore/run issue with eZ Publish 4.0.0 / 4.0.1 on eZURI::instance()
- Disabled language attribute by default on ezscript() for xhtml strict / xhtml1.1 / html5 validation
- BC: Fixed setting typo LocaleScript -> LocalScript in ezjscore.ini
- Added support for more general use of has_access_to_limitation including array values for limitations
- ezjsc::search: Added support for SearchContentClassIdentifier (requires ezp 4.1 or higher)
- ezjsc::search: Return SearchString as part of returned result for js callback use
- Bump required eZ Publish version to 4.1
- Implemented #15811: ez JS Packer option to include mofied time in file url
- Packer: Don't wast cycles on packing and caching if there is only one file, serve it directly


# v1.0.0  29 Sept 2009

- Added FAQ and CHANGELOG
- Moved [eZJSCore]Packer=disabled from site.ini to ezjscore.ini to comply with eZ Network certification



# v1.0.0rc2  19 Sept 2009

- Added link to project website in ezinfo page
- Don't store $moduleResult['content_info']['persistent_variable'] unless it's already defined (to avoid confusing code that checks for presence of $moduleResult['content_info'])
- Flatten persistent_variable array to make sure array_unique can actually remove all duplicates
- Fixed bug: Access to a kernel module via index_ajax.php
- Added note in ezinfo about jQuery
- Fixed url to jQuery to use google cdn and not googlecode


# v1.0.0rc1  17 Sept 2009

- Initial version